# internal/models/user_group.go
@@ -21,15 +21,18 @@ type User struct {
 
 type Group struct {
 	gorm.Model
-	Name                  string     `json:"name"`
-	InviteCode            string     `gorm:"uniqueIndex;size:20" json:"invite_code"`
-	CreatorID             uint       `json:"creator_id"`
-	Members               []User     `gorm:"-" json:"members"`
-	TimerTitle            string     `json:"timer_title"`
-	TimerStartDate        *time.Time `json:"timer_start_date"`
-	PinnedMessage         string     `json:"pinned_message"`
-	PinnedMessageAuthorID uint       `json:"pinned_message_author_id"`
-	MyRole                string     `gorm:"-" json:"my_role,omitempty"`
+	Name                              string     `json:"name"`
+	InviteCode                        string     `gorm:"uniqueIndex;size:20" json:"invite_code"`
+	CreatorID                         uint       `json:"creator_id"`
+	Members                           []User     `gorm:"-" json:"members"`
+	TimerTitle                        string     `json:"timer_title"`
+	TimerStartDate                    *time.Time `json:"timer_start_date"`
+	PinnedMessage                     string     `json:"pinned_message"`
+	PinnedMessageAuthorID             uint       `json:"pinned_message_author_id"`
+	MyRole                            string     `gorm:"-" json:"my_role,omitempty"`
+	PendingOwnershipTransfer          bool       `gorm:"-" json:"pending_ownership_transfer"`
+	PendingOwnershipTransferRequestID *uint      `gorm:"-" json:"pending_ownership_transfer_request_id,omitempty"`
+	PendingOwnershipTransferToUserID  *uint      `gorm:"-" json:"pending_ownership_transfer_to_user_id,omitempty"`
 }
 
 type GroupMember struct {
